# RTXAdvect

./: .gitignore  CMakeLists.txt
cuda/: common.h  cudaParticleAdvection.cu  particles.cu  utils.cpp
dataset/: main.cpp
dataset/microfludics/: vtu2TetAdvect.py
owl/owl/common/cmake/: FindTBB.cmake
query/: ConvexQuery.cu  RTQuery.cu  RTQuery.h
scripts/: mesh_preprocess.ipynb  vtu2TetAdvect.py
